--- a/GithubRepoExplorerAngular/src/app/github/repository-details-dialog/repository-details-dialog.component.html
+++ b/GithubRepoExplorerAngular/src/app/github/repository-details-dialog/repository-details-dialog.component.html
@@ -1,10 +1,17 @@
-<h2 mat-dialog-title>{{ data.name }}</h2>
-<div mat-dialog-content>
-  <p><strong>Description:</strong> {{ data.description }}</p>
-  <p><strong>Owner:</strong> {{ data.owner.login }}</p>
-  <p><strong>Stars:</strong> {{ data.stargazers_count }}</p>
-  <p><strong>Forks:</strong> {{ data.forks_count }}</p>
+<h1 mat-dialog-title>Repository Details</h1>
+
+<div mat-dialog-content class="dialog-content">
+  <div mat-card class="repo-card">
+    <div mat-card-content>
+      <p><strong>Name:</strong> {{ data.name }}</p>
+      <p><strong>Description:</strong> {{ data.description }}</p>
+      <p><strong>Owner:</strong> {{ data.owner.login }}</p>
+      <p><strong>Stars:</strong> {{ data.stargazers_count }}</p>
+      <p><strong>Forks:</strong> {{ data.forks_count }}</p>
+    </div>
+  </div>
 </div>
+
 <div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="true">Close</button>
+  <button mat-button mat-dialog-close>Close</button>
 </div>
